add securityDefinitions
